# Murata-2024

./: .gitignore  README.md  args.curves  cam_pos.ipynb  camera_place.csv  color_det.ipynb  contour_extraction-Copy1.ipynb  contour_extraction-Copy2.ipynb  contour_extraction-Copy3.ipynb  contour_extraction-Copy4.ipynb  contour_extraction-Copy5.ipynb  contour_extraction-Copy6.ipynb  contour_extraction-Copy8.ipynb  contour_extraction.ipynb  contour_extraction.md  mask_check.ipynb  non_mask_F.ipynb  overlay.ipynb  pyproject.toml
.ipynb_checkpoints/: cam_pos-checkpoint.ipynb  color_det-checkpoint.ipynb  contour_extraction-Copy1-checkpoint.ipynb  contour_extraction-Copy2-checkpoint.ipynb  contour_extraction-Copy3-checkpoint.ipynb  contour_extraction-Copy4-checkpoint.ipynb  contour_extraction-Copy5-checkpoint.ipynb  contour_extraction-Copy6-checkpoint.ipynb  contour_extraction-Copy7-checkpoint.ipynb  contour_extraction-checkpoint.ipynb  curve_open3D-checkpoint.ipynb  non_mask_F-checkpoint.ipynb
F_csv/: 0_2.csv  0_21.csv  10_14.csv  10_17.csv  11_19.csv  11_23.csv  12_18.csv  13_15.csv  16_19.csv  16_20.csv  1_12.csv  1_6.csv  21_23.csv  2_14.csv  3_6.csv  3_8.csv  4_15.csv  4_22.csv  5_22.csv  5_8.csv  7_17.csv  7_20.csv  9_13.csv  9_18.csv
_view_mat/: 0.csv  1.csv  10.csv  11.csv  12.csv  13.csv  14.csv  15.csv  16.csv  17.csv  18.csv  19.csv  2.csv  20.csv  21.csv  22.csv  23.csv  24.csv  3.csv  4.csv  5.csv  6.csv  7.csv  8.csv  9.csv
cam_pos_rot/: 0.csv  1.csv  10.csv  11.csv  12.csv  13.csv  14.csv  15.csv  16.csv  17.csv  18.csv  19.csv  2.csv  20.csv  21.csv  22.csv  23.csv  24.csv  3.csv  4.csv  5.csv  6.csv  7.csv  8.csv  9.csv
csv_test/: cur.csv  frag_test.csv
demo/: 1_label.ipynb  2_reconstruction.ipynb  2_x_PR.ipynb  2_x_curve_fragments_vis.ipynb  3_B-spline.ipynb  3_bspline_improved.ipynb  4_visualization.ipynb
real_data/: Untitled.ipynb  contour_extraction.ipynb  del_tag.pickle  label.pickle  tag.pickle
simlation_data/: PR_curve-Copy1.ipynb  PR_curve.ipynb  Untitled.ipynb  contour_extraction.ipynb  contour_extraction_quantitative_fix.ipynb  gen_supported_curves-Copy1.ipynb  gen_supported_curves.ipynb  opt_support_graph.ipynb  real_opt_sup_th.pickle  sim.csv
src/: __init__.py  base.py  camera.py  curve_based_reconstruction.py  epipolar.py  fragment.py
src_Copy_1/: README.md  __init__.py  camera.py  curve_based_reconstruction.py  epipolar.py  fragment.py  sep_test.ipynb
view_mat/: 0.csv  1.csv  10.csv  11.csv  12.csv  13.csv  14.csv  15.csv  16.csv  (+18 more)
(+5932 files in other folders)
