[tool.poetry]
authors = ["Your Name <you@example.com>"]
description = ""
name = "curve_sketch"
version = "0.1.0"

[tool.poetry.dependencies]
joblib = "^1.1.0"
matplotlib = "^3.5.2"
numpy = "^1.23.1"
open3d = "0.15.1"
opencv-python = "^4.6.0"
python = ">= 3.8, < 3.12"
scipy = "^1.9.0"

[tool.poetry.dev-dependencies]
liccheck = "^0.7.2"
jupyter = "^1.0.0"
jupyterlab = "^3.4.4"
tqdm = "^4.64.0"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]

[tool.liccheck]
authorized_licenses = [
  "bsd",
  "new bsd",
  "bsd license",
  "simplified bsd",
  "apache",
  "apache 2.0",
  "apache software license",
  "isc license",
  "isc license (iscl)",
  "mit",
  "mit license",
  "python software foundation license",
  "Python Software Foundation",
]
unauthorized_licenses = [
  "gpl v3",
  "gnu agplv3",
]

[tool.liccheck.authorized_packages]
uuid = "<=1.30"
