[tool.poetry]
authors = ["Murata, Hidekazu <murata@morphometrics.jp>", "Noshita, Koji <noshita@morphometrics.jp>"]
description = ""
license = "Apache-2.0"
name = "curve_based_3d_reconstruction"
version = "1.0.0"

[tool.poetry.dependencies]
joblib = "^1.1.0"
matplotlib = "^3.5.2"
numpy = "^1.23.1"
open3d = "0.15.1"
opencv-python = "^4.6.0"
python = ">= 3.8, < 3.12"
scipy = "^1.9.0"

[tool.poetry.dev-dependencies]
jupyter = "^1.0.0"
jupyterlab = "^3.4.4"
liccheck = "^0.7.2"
tqdm = "^4.64.0"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]

[tool.liccheck]
authorized_licenses = [
  "bsd",
  "new bsd",
  "bsd license",
  "simplified bsd",
  "apache",
  "apache 2.0",
  "apache software license",
  "isc license",
  "isc license (iscl)",
  "mit",
  "mit license",
  "python software foundation license",
  "Python Software Foundation",
]
unauthorized_licenses = [
  "gpl v3",
  "gnu agplv3",
]

[tool.liccheck.authorized_packages]
uuid = "<=1.30"
